--- a/index.html
+++ b/index.html
@@ -11,10 +11,46 @@
     <header><div class="headlg">Шапка</div></header>
     <div class="txt1">Главный заголовок</div>
     <div class="soder">
-        <div class="txt2">Заголовок</div>
-        <div class="txt3">Основной текст</div>
+        <div class="txt2">1. Пункт первый</div>
+        <div class="txt3">Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.    
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.             
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.    
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. 
+        </div>
+        <div class="txt2">2. Пункт второй</div>
+        <div class="txt3">
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.    
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.             
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.    
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст.
+        </div>
+        <div class="txt2">3. Пункт третий</div>
+        <div class="txt3">
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.    
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.             
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст.    
+Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. Основной текст. 
+Основной текст. Основной текст.
+        </div>
     </div>
-    
+    <div class="pdvl">Подвал</div>
     
 
 </body>
